// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangeOtherListModal renders appropriate instructions when copy and lists 1`] = `
<div
  class="modal-content"
>
  <div
    class="modal-header"
  >
    Choose an existing list or create a new one to copy items
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div>
  <div
    class="modal-body"
  >
    <form
      autocomplete="off"
      class=""
    >
      <button
        class="float-end btn btn-link"
        style="padding: 0px;"
        type="button"
      >
        Create new list
      </button>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="existingList"
        >
          Existing list
        </label>
        <select
          class="form-control"
          id="existingList"
          name="existingList"
        >
          <option
            disabled=""
            value=""
          >
            Select Existing list
          </option>
          <option
            value="id2"
          >
            bar
          </option>
        </select>
      </div>
      <div
        class="btn-group"
        role="group"
      >
        <div
          class=" gap-2 mt-3"
        >
          <button
            class="btn btn-success"
            type="submit"
          >
            Complete
          </button>
          <button
            class="btn btn-link"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChangeOtherListModal renders appropriate instructions when move and lists 1`] = `
<div
  class="modal-content"
>
  <div
    class="modal-header"
  >
    Choose an existing list or create a new one to move items
    <button
      aria-label="Close"
      class="btn-close"
      type="button"
    />
  </div>
  <div
    class="modal-body"
  >
    <form
      autocomplete="off"
      class=""
    >
      <button
        class="float-end btn btn-link"
        style="padding: 0px;"
        type="button"
      >
        Create new list
      </button>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="existingList"
        >
          Existing list
        </label>
        <select
          class="form-control"
          id="existingList"
          name="existingList"
        >
          <option
            disabled=""
            value=""
          >
            Select Existing list
          </option>
          <option
            value="id2"
          >
            bar
          </option>
        </select>
      </div>
      <div
        class="btn-group"
        role="group"
      >
        <div
          class=" gap-2 mt-3"
        >
          <button
            class="btn btn-success"
            type="submit"
          >
            Complete
          </button>
          <button
            class="btn btn-link"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ChangeOtherListModal renders appropriate instructions when no lists 1`] = `
<div
  class="modal-header"
>
  You do not have any other  Grocery Lists. Please create a new list to take this action.
  <button
    aria-label="Close"
    class="btn-close"
    type="button"
  />
</div>
`;
